--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
 	font-weight: 400;
 
 	color-scheme: light dark;
-	color: rgba(255, 255, 255, 0.87);
-	background-color: #242424;
+	color: black;
+	background-color: #f8f9fa;
 
 	/* font-synthesis: none; */
 	text-rendering: optimizeLegibility;
@@ -14,5 +14,6 @@
 }
 
 body {
-	padding: 30px;
+	margin: 0;
+	padding: 0;
 }
