--- a/src/components/pokemonProfile.module.css
+++ b/src/components/pokemonProfile.module.css
@@ -12,12 +12,13 @@
 	margin-inline: auto;
 }
 
-.navBarContainer > h1 {
-	margin: 0;
+.navBarContainer span {
 	color: white;
-	font-weight: normal;
-	letter-spacing: -1px;
+	font-size: 1.6em;
+	font-weight: bold;
 }
+
+
 
 .closeBtn {
 	background: none;
@@ -40,27 +41,104 @@
 .bodyContainer {
 	display: flex;
 	flex-direction: column;
-	gap: 15px;
+	gap: 20px;
 	max-width: min(700px, 90%);
 	margin-inline: auto;
 	padding: 30px 0;
 }
 
 .infoBox {
-	padding: 15px;
+	padding: 30px;
 	background-color: white;
 	border-radius: 15px;
 	box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
-.infoBox > h3 {
+h1 {
+	display: flex;
+	justify-content: space-between;
+	margin-top: 0;
+	font-weight: normal;
+	/* text-align: center; */
+	letter-spacing: -1px;
+}
+
+h1 .id {
+	color: rgba(0, 0, 0, 0.5);
+}
+
+h3 {
 	margin-top: 0;
 }
 
 .infoBox > img {
 	display: block;
-	width: min(475px, 100%);
+	width: min(320px, 100%);
 	margin-inline: auto;
+}
+
+/* czy nie do wywalenia?
+.stats { 
+	width: 100%;
+} */
+
+.statLabel {
+	margin-bottom: 6px;
+}
+
+.statContainer {
+	width: 100%;
+	height: 16px;
+	border-radius: 50px;
+}
+
+.statBar {
+	height: 100%;
+	border-radius: 50px;
+	text-align: center;
+	font-size: 12px;
+}
+
+.statContainer[data-statType='hp'] {
+	background-color: rgb(105, 220, 18, 0.25);
+}
+.statBar[data-statType='hp'] {
+	background-color: #69dc12;
+}
+
+.statContainer[data-statType='attack'] {
+	background-color: rgb(239, 204, 24, 0.3);
+}
+.statBar[data-statType='attack'] {
+	background-color: #efcc18;
+}
+
+.statContainer[data-statType='defense'] {
+	background-color: rgb(232, 100, 18, 0.25);
+}
+.statBar[data-statType='defense'] {
+	background-color: #e86412;
+}
+
+.statContainer[data-statType='special-attack'] {
+	background-color: rgb(20, 195, 241, 0.25);
+}
+.statBar[data-statType='special-attack'] {
+	background-color: #14c3f1;
+}
+
+.statContainer[data-statType='special-defense'] {
+	background-color: rgb(74, 106, 223, 0.25);
+}
+.statBar[data-statType='special-defense'] {
+	background-color: #4a6adf;
+}
+
+.statContainer[data-statType='speed'] {
+	background-color: rgb(213, 29, 173, 0.25);
+}
+.statBar[data-statType='speed'] {
+	background-color: #d51dad;
 }
 
 .types {
@@ -124,4 +202,7 @@
 }
 .type[data-type='steel'] {
 	background-color: #89a1b0;
+}
+.type[data-type='fairy'] {
+	background-color: #e397d1;
 }
