--- a/src/components/pokemonProfile.module.css
+++ b/src/components/pokemonProfile.module.css
@@ -18,8 +18,6 @@
 	font-weight: bold;
 }
 
-
-
 .closeBtn {
 	background: none;
 	border: none;
@@ -76,11 +74,6 @@ h3 {
 	width: min(320px, 100%);
 	margin-inline: auto;
 }
-
-/* czy nie do wywalenia?
-.stats { 
-	width: 100%;
-} */
 
 .statLabel {
 	margin-bottom: 6px;
@@ -144,11 +137,12 @@ h3 {
 .types {
 	display: flex;
 	gap: 5px;
+	flex-wrap: wrap;
 }
 
 .type {
 	padding: 5px 15px;
-	background-color: grey;
+	background-color: lightgrey;
 	border-radius: 50px;
 }
 
@@ -205,4 +199,16 @@ h3 {
 }
 .type[data-type='fairy'] {
 	background-color: #e397d1;
+}
+
+.moves {
+	display: flex;
+	gap: 5px;
+	flex-wrap: wrap;
+}
+
+.move {
+	padding: 5px 15px;
+	background-color: lightgrey;
+	border-radius: 5px;
 }
