--- a/src/components/pokemonProfile.module.css
+++ b/src/components/pokemonProfile.module.css
@@ -118,45 +118,45 @@ h3 {
 	font-size: 12px;
 }
 
-.statContainer[data-statType='hp'] {
+.statContainer[data-stat-type='hp'] {
 	background-color: rgb(105, 220, 18, 0.25);
 }
-.statBar[data-statType='hp'] {
+.statBar[data-stat-type='hp'] {
 	background-color: #69dc12;
 }
 
-.statContainer[data-statType='attack'] {
+.statContainer[data-stat-type='attack'] {
 	background-color: rgb(239, 204, 24, 0.3);
 }
-.statBar[data-statType='attack'] {
+.statBar[data-stat-type='attack'] {
 	background-color: #efcc18;
 }
 
-.statContainer[data-statType='defense'] {
+.statContainer[data-stat-type='defense'] {
 	background-color: rgb(232, 100, 18, 0.25);
 }
-.statBar[data-statType='defense'] {
+.statBar[data-stat-type='defense'] {
 	background-color: #e86412;
 }
 
-.statContainer[data-statType='special-attack'] {
+.statContainer[data-stat-type='special-attack'] {
 	background-color: rgb(20, 195, 241, 0.25);
 }
-.statBar[data-statType='special-attack'] {
+.statBar[data-stat-type='special-attack'] {
 	background-color: #14c3f1;
 }
 
-.statContainer[data-statType='special-defense'] {
+.statContainer[data-stat-type='special-defense'] {
 	background-color: rgb(74, 106, 223, 0.25);
 }
-.statBar[data-statType='special-defense'] {
+.statBar[data-stat-type='special-defense'] {
 	background-color: #4a6adf;
 }
 
-.statContainer[data-statType='speed'] {
+.statContainer[data-stat-type='speed'] {
 	background-color: rgb(213, 29, 173, 0.25);
 }
-.statBar[data-statType='speed'] {
+.statBar[data-stat-type='speed'] {
 	background-color: #d51dad;
 }
 
