--- a/src/components/pokemonGrid.module.css
+++ b/src/components/pokemonGrid.module.css
@@ -19,6 +19,7 @@
 .headerContainer > h1 {
 	margin-inline: auto;
 	color: white;
+	font-size: clamp(1em, 10vw, 2em);
 	font-weight: normal;
 	text-align: center;
 	letter-spacing: -1px;
